--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.1.3",
     "fast-sort": "^3.4.0",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.3.0",
     "postcss": "8.4.35",
     "prisma": "^5.11.0",
