--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.18",
+    "bcrypt": "^5.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
     "fast-sort": "^3.4.0",
