--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "preview-email":"email dev -p 3030"
+    "preview-email": "email dev -p 3030"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^1.9.4",
+    "resend": "^1.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2",
     "zod": "^3.22.4"
