--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
     "@react-email/components": "^0.0.7",
+    "@react-email/render": "^0.0.12",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
@@ -30,7 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^1.9.4",
-    "resend": "^1.0.0",
+    "sharp": "^0.33.3",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2",
     "zod": "^3.22.4"
